@@ -156,3 +156,28 @@ if defined?(Rufus::Edo)
 
 end
 
+describe 'Rufus::Tokyo::Tyrant (lua extensions)' do
+
+  before do
+    @cab = Rufus::Edo::NetTyrant.new('127.0.0.1', 45000)
+    @cab.clear
+  end
+  after do
+    @cab.close
+  end
+
+  it 'should call lua extensions' do
+
+    @cab['toto'] = '0'
+    3.times { @cab.ext(:incr, 'toto', '1') }
+    @cab.ext('incr', 'toto', 2) # lax
+
+    @cab['toto'].should.equal('5')
+  end
+
+  it 'should return nil when function is missing' do
+
+    @cab.ext(:missing, 'nada', 'forever').should.equal(nil)
+  end
+end
+
